# starks

./: .bumpversion.cfg  .gitignore  .travis.yml  README.md  conftest.py  setup.cfg  setup.py
examples/market_maker/: on_chain_market_maker.vy
examples/tokens/: ERC20.vy
misc/: test_bbs.py  test_commitment.py
starks/: README.md  __init__.py  air.py  ali.py  apr.py  arithmetizer.py  ast.py  ast_utils.py  blockchain.py  blum_blum_shub.py  commitment.py  compile_lll.py  compiler.py  compression.py  euclidean.py  exceptions.py  fft.py  finitefield.py  floatingpoint.py  fri.py  merkle_tree.py  mimc_stark.py  modp.py  multivariate_polynomial.py  numbertype.py  optimizer.py  poly_utils.py  polynomial.py  primality.py  rationals_modp.py  reedsolomon.py  run_blockchain.py  settings.py  stark.py  utils.py  zero_knowledge.py  zkp_3_coloring.py
starks/cli/: starks_compile.py  starks_json.py  starks_lll.py  starks_serve.py
starks/eth/: __init__.py  abc.py  constants.py  typing.py  validation.py
tests/: Logistic_Regression.py  base_conftest.py  conftest.py  generate_go_ethereum_fixture.py  test_air.py  test_ali.py  test_apr.py  test_compression.py  test_euclidean.py  test_fft.py  test_finitefield.py  test_fri.py  test_merkle_tree.py  test_multivariate.py  test_numbertype.py  test_poly_utils.py  test_reedsolomon.py  test_stark.py  test_utils.py
tutorials/: A first look at binary finite fields.ipynb  Binary Finite Fields Pt 1.ipynb  Binary Finite Fields Pt 2.ipynb  Binary Finite Fields.ipynb  Introduction to Finite Fields.ipynb  Polynomials.ipynb  STARKs from Scratch.ipynb
(+315 files in other folders)
