[metadata]
name = starks 
author = starks contributors 
summary = Experimental Package for Starks experiments 
home-page = https://github.com/computablelabs/starks
license = MIT
version = 0.0
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
keywords =
    setup
    distutils
[files]
packages =
    starks 
