[metadata]
name = starks 
author = starks contributors 
summary = Experimental Package for Starks experiments 
home-page = https://github.com/computablelabs/starks
license = MIT
version = 0.1
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
keywords =
    setup
    distutils
[files]
packages =
    starks 

[tool:pytest]
addopts = -n 4 --cov-report term --cov-report html --cov=vyper --hypothesis-show-statistics --showlocals
python_files = test_*.py
testpaths = tests

[aliases]
test = pytest
